@@ -7,8 +7,8 @@
     i18n:translate="">Events are objects for use in Calendar topical queries on the catalog.</property>
  <property name="content_icon">event_icon.gif</property>
  <property name="content_meta_type">CMF Event</property>
- <property name="product">CMFCalendar</property>
- <property name="factory">addEvent</property>
+ <property name="product"></property>
+ <property name="factory">cmf.event</property>
  <property name="immediate_view">event_edit_form</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
