@@ -1,0 +1,98 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five">
+
+  <!-- Document -->
+
+  <five:registerClass
+      class=".Document.Document"
+      meta_type="Document"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".Document.DocumentFactory"
+      name="cmf.document"
+      />
+
+  <!-- Favorite -->
+
+  <five:registerClass
+      class=".Favorite.Favorite"
+      meta_type="Favorite"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".Favorite.FavoriteFactory"
+      name="cmf.favorite"
+      />
+
+  <subscriber handler=".Favorite.handleFavoriteAddedEvent" />
+
+  <!-- File -->
+
+  <five:registerClass
+      class=".File.File"
+      meta_type="Portal File"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".File.FileFactory"
+      name="cmf.file"
+      />
+
+  <!-- Image -->
+
+  <five:registerClass
+      class=".Image.Image"
+      meta_type="Portal Image"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".Image.ImageFactory"
+      name="cmf.image"
+      />
+
+  <!-- Link -->
+
+  <five:registerClass
+      class=".Link.Link"
+      meta_type="Link"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".Link.LinkFactory"
+      name="cmf.link"
+      />
+
+  <!-- NewsItem -->
+
+  <five:registerClass
+      class=".NewsItem.NewsItem"
+      meta_type="News Item"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".NewsItem.NewsItemFactory"
+      name="cmf.newsitem"
+      />
+
+  <!-- SkinnedFolder -->
+
+  <five:registerClass
+      class=".SkinnedFolder.SkinnedFolder"
+      meta_type="Skinned Folder"
+      permission="cmf.AddPortalContent"
+      />
+
+  <utility
+      component=".SkinnedFolder.SkinnedFolderFactory"
+      name="cmf.folder.skinned"
+      />
+
+</configure>
