@@ -7,8 +7,8 @@
   They may also contain HTML, or "plain" text.</property>
  <property name="content_icon">document_icon.gif</property>
  <property name="content_meta_type">Document</property>
- <property name="product">CMFDefault</property>
- <property name="factory">addDocument</property>
+ <property name="product"></property>
+ <property name="factory">cmf.document</property>
  <property name="immediate_view">metadata_edit_form</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
