@@ -7,8 +7,8 @@
   an optional description.</property>
  <property name="content_icon">newsitem_icon.gif</property>
  <property name="content_meta_type">News Item</property>
- <property name="product">CMFDefault</property>
- <property name="factory">addNewsItem</property>
+ <property name="product"></property>
+ <property name="factory">cmf.newsitem</property>
  <property name="immediate_view">metadata_edit_form</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
