@@ -6,8 +6,8 @@
     i18n:translate="">Topics are canned queries for organizing content with up to date queries into the catalog.</property>
  <property name="content_icon">topic_icon.gif</property>
  <property name="content_meta_type">Portal Topic</property>
- <property name="product">CMFTopic</property>
- <property name="factory">addTopic</property>
+ <property name="product"></property>
+ <property name="factory">cmf.topic</property>
  <property name="immediate_view">topic_edit_form</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
