@@ -2,6 +2,9 @@ Trunk only (unreleased)
 
   New Features
 
+    - Content: Added IFactory utilities for all content classes.
+      They are now used by default instead of the old constructor methods.
+
     - FactoryTypeInformation: Added support for Zope3 style factories.
       If the 'product' property of a type info instance is empty the 'factory'
       property is interpreted as an IFactory name.
@@ -11,6 +14,12 @@ Trunk only (unreleased)
     -
 
   Others
+
+    - Content: All content classes are now registered by ZCML.
+      ContentInit is still used to register oldstyle constructors.
+
+    - Favorite: Added 'handleFavoriteAddedEvent' subscriber.
+      This replaces the 'manage_afterAdd' hook and some code in 'addFavorite'.
 
     - CMFCatalogAware: Added 'handleObjectEvent' subscriber.
       This replaces the deprecated 'manage_afterAdd', 'manage_afterClone' and
